--- a/src/components/ui/uiStyles.css
+++ b/src/components/ui/uiStyles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+
 /* TOTIS EN EL TOTEM */
 .toti-ask {
     position: relative;
