--- a/src/components/Imagenes_carrusel/carrusel.css
+++ b/src/components/Imagenes_carrusel/carrusel.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 .div-carrusel {
     display: flex;
     flex-direction: column;
@@ -37,7 +39,7 @@ img {
     height: 90px;
     left: 339px;
     top: 1552px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 37px;
