--- a/src/components/teclado/styles-key.css
+++ b/src/components/teclado/styles-key.css
@@ -41,7 +41,7 @@
     height: 80px;
     left: 41%;
     right: 50%;
-    font-family: sans-serif;
+    font-family: 'Inter', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
