--- a/src/components/tour-virtual/tourvirtual.css
+++ b/src/components/tour-virtual/tourvirtual.css
@@ -3,12 +3,15 @@
     top: 150px;
     left: 400px;
 }
+.font{
+    font-family: 'Inter', sans-serif;
+}
 
 .titulo-tour {
     position: absolute;
     top: 15px;
     right: 90px;
-    font-family: sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 45px;
@@ -48,7 +51,7 @@
 .recorre {
     position: absolute;
     top: 750px;
-    font-family: sans-serif;;
+    
     font-style: normal; 
     font-weight: 700;
     font-size: 45px;
@@ -56,7 +59,7 @@
     right: 300px;
     display: flex;
     align-items: center;
-
+    font-family: 'Inter', sans-serif;
     color: #FFFFFF;
 }
 
@@ -71,7 +74,7 @@
     top: 1100px;
     right: 400px;
     color: #FFFFFF;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
@@ -106,7 +109,7 @@
     position: absolute;
     left: 285px;
     top: 270px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 45px;
