--- a/src/components/ui/uiStyles.css
+++ b/src/components/ui/uiStyles.css
@@ -26,7 +26,7 @@
 .sub-title {
     position: relative;
     top: 380px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif !important;
     font-style: normal;
     font-weight: 700;
     font-size: 56px;
@@ -63,7 +63,7 @@
 }
 
 .marco .listaEnlace li .enlaces {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif !important;
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
