--- a/src/components/tour-virtual/tourvirtual.css
+++ b/src/components/tour-virtual/tourvirtual.css
@@ -3,7 +3,8 @@
     top: 150px;
     left: 400px;
 }
-.font{
+
+.font {
     font-family: 'Inter', sans-serif;
 }
 
@@ -22,6 +23,7 @@
     color: #FFFFFF;
 
 }
+
 .div-title {
     display: flex;
     justify-content: start;
@@ -51,7 +53,7 @@
 .recorre {
     position: absolute;
     top: 750px;
-    font-style: normal; 
+    font-style: normal;
     font-weight: 700;
     font-size: 45px;
     line-height: 54px;
@@ -70,7 +72,7 @@
 
 .btn-get {
     position: absolute;
-    top: 1100px;
+    top: 1120px;
     right: 400px;
     color: #FFFFFF;
     font-family: 'Inter', sans-serif;
@@ -115,60 +117,91 @@
     line-height: 54px;
     color: #FFFFFF;
 }
-.toti{
+
+.toti {
     position: absolute;
     left: 400px;
     width: 400px;
 }
+
 .fondocodigo {
     position: absolute;
     top: -10px;
     ;
 }
+
 .totitour2 {
     position: absolute;
-    right:  0px;
-    top: 800px;   
+    right: 0px;
+    top: 800px;
 }
 
 .posicion {
-position: absolute;
-left: 80px;
-top: 750px;
-border-radius: 70px;
+    position: absolute;
+    left: 80px;
+    top: 750px;
+    border-radius: 70px;
 }
 
-.dos{
-top: 170px;
-left: 200px;
-border-radius: 70px 70px 0px 70px;
-width: 700px;
+.dos {
+    top: 170px;
+    left: 200px;
+    border-radius: 70px 70px 0px 70px;
+    width: 700px;
 }
 
-.TORRE{
+.TORRE {
 
-top: 100px;
-color: #FFFFFF;
-left: 200px;
+    top: 100px;
+    color: #FFFFFF;
+    left: 200px;
 
 }
 
-.Esfera{
-box-sizing: border-box;
-position: absolute;
-width: 389px;
-height: 389px;
-left: 614px;
-top: 738px;
-border: 19px solid #000000;
-filter: blur(56px)
+.Esfera {
+    box-sizing: border-box;
+    position: absolute;
+    width: 389px;
+    height: 389px;
+    left: 614px;
+    top: 738px;
+    border: 19px solid #000000;
+    filter: blur(56px)
 }
-.EdificioB{
 
-  position: absolute;
+.EdificioB {
+
+    position: absolute;
     top: -100px;
 }
-.posicion{
-position: absolute;
 
+.posicion {
+    position: absolute;
+
+}
+
+.fondo-qr {
+    position: absolute;
+    left: -250px;
+
+}
+
+.scroll {
+    position: absolute;
+    left: -80px;
+
+}
+.img-qr{
+    position: absolute;
+    left: 450px;
+}
+.img-btn{
+    position: absolute;
+    left: -230px;
+}
+.btn-a{
+    top: 100px;
+}
+.btn-b{
+    top: -130px;
 }
