--- a/src/components/tour-virtual/tourvirtual.css
+++ b/src/components/tour-virtual/tourvirtual.css
@@ -207,3 +207,13 @@
 .btn-b{
     top: -130px;
 }
+.contenedor-qr{
+    display: flex;
+    flex-direction: row;
+}
+.img-qr{
+    position: absolute;
+    top: -80px;
+    left: 510px;
+    width: 265px;
+}
