--- a/src/components/tour-virtual/tourvirtual.css
+++ b/src/components/tour-virtual/tourvirtual.css
@@ -91,8 +91,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: absolute;
     top: 200px;
+    left: 385px;
 }
 
 .fondo {
