--- a/src/components/Imagenes_carrusel/carrusel.css
+++ b/src/components/Imagenes_carrusel/carrusel.css
@@ -87,19 +87,13 @@ footer .social-icon {
 
 footer .social-icon li {
     list-style: none;
-}
-
-footer .social-icon li {
     font-size: 2em;
     color: #1E1E1E;
     margin: 0 110px;
-    display: inline-block;
-    position: relative;
-    top: 20px;
+    display: flex;
     transition: 0.5s;
     width: 95px;
     height: 95px;
-    background: #FFB71B;
     border-radius: 60px;
 }
 
@@ -116,18 +110,17 @@ footer .social-icon li img{
 
 footer .social-icon li:hover img {
     position: absolute;
-    transform: scale(1);
+    transform: scale(1.5);
     transition-delay: 0.25s;
 
 }
 
 footer .social-icon li:hover {
-    transform: translateY(-15px);
+    transform: translateY(-505px);
     width: 185px;
     height: 185px;
     margin: 0 15px;
     box-shadow: 0 10px 25px rgb(0, 0, 0);
-    background: #FFFFFF;
 }
 
 footer .social-icon li:hover .icon-fb {
@@ -344,6 +337,12 @@ footer .wave#wave4 {
     100% {
         background-position-x: 1000px;
     }
+}
+.text-qr{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 120px;
 }
 
 
