--- a/src/components/tour-virtual/tourvirtual.css
+++ b/src/components/tour-virtual/tourvirtual.css
@@ -196,10 +196,8 @@
     top: -100px;
 }
 
-.posicion {
-    position: absolute;
 
-}
+
 
 .fondo-qr {
     position: absolute;
@@ -237,6 +235,19 @@
     width: 265px;
     max-width: 230px;
 }
+
+
+
+.VarasA{
+  
+    position: absolute;
+    top: 0px;
+    font-size: 35px;
+    line-height: 54px;
+    align-items: center;  font-family: 'Inter', sans-serif;
+    color: #000000;
+}
+
 .torreA{
   
     position: absolute;
@@ -245,7 +256,6 @@
     line-height: 54px;
     align-items: center;  font-family: 'Inter', sans-serif;
     color: #FFFFFF;
-
 }
 .PatioA{
   
@@ -255,8 +265,21 @@
     line-height: 54px;
     align-items: center;  font-family: 'Inter', sans-serif;
     color: #FFFFFF;
-
 }
+
+
+
+
+.TorreB{
+  
+    position: absolute;
+    top: 0px;
+    font-size: 35px;
+    line-height: 54px;
+    align-items: center;  font-family: 'Inter', sans-serif;
+    color: #000000;
+}
+
 .VarasB{
   
     position: absolute;
@@ -276,6 +299,17 @@
     align-items: center;  font-family: 'Inter', sans-serif;
     color: #FFFFFF;
 }
+
+.PatioC{
+  
+    position: absolute;
+    top: 0px;
+    font-size: 35px;
+    line-height: 54px;
+    align-items: center;  font-family: 'Inter', sans-serif;
+    color: #000000;
+}
+
 .EdificioC{
   
     position: absolute;
@@ -295,3 +329,4 @@
     align-items: center;  font-family: 'Inter', sans-serif;
     color: #FFFFFF;
 }
+
