--- a/src/components/weather/weather.css
+++ b/src/components/weather/weather.css
@@ -1,4 +1,4 @@
-span {
+span{
     color: #fff;
     font-size: 50px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -8,14 +8,12 @@ span {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 12px;
     position: absolute;
     top: 0px;
     
 }
 .timeLocation {
-    margin-right: 340px;
+    margin-right: 300px;
+    display: flex;
 }
-
-
-
