--- a/src/components/agendate/agenda.css
+++ b/src/components/agendate/agenda.css
@@ -1,17 +1,19 @@
-.agenda{
-position: absolute;
-/* left: 380px; */
-top: 200px;
-}
-.all{
- display: flex;
-justify-content: center;
+.agenda {
+    position: absolute;
+    /* left: 380px; */
+    top: 200px;
 }
 
-.a{
+.all {
+    display: flex;
+    justify-content: center;
+}
+
+.a {
     position: relative;
 }
-.title-agenda{
+
+.title-agenda {
     font-style: normal;
     font-weight: 700;
     font-size: 28px;
@@ -22,7 +24,8 @@ justify-content: center;
     font-family: 'Inter', sans-serif;
     color: #FFFFFF;
 }
-.title-servicios{
+
+.title-servicios {
     font-style: normal;
     font-weight: 700;
     font-size: 28px;
@@ -35,7 +38,7 @@ justify-content: center;
 }
 
 
-.bton{
+.bton {
     position: absolute;
     top: 1300px;
     right: 380px;
@@ -69,18 +72,20 @@ justify-content: center;
     border-radius: 50px;
 }
 
-.totiup{
+.totiup {
     top: 420px;
     position: absolute;
     /* left: 330px; */
 }
-.totiright{
+
+.totiright {
     top: 700px;
     position: absolute !important;
     left: 100px;
     z-index: 4;
 }
-.totileft{
+
+.totileft {
     top: 700px;
     position: absolute !important;
     right: 100px;
@@ -91,10 +96,10 @@ justify-content: center;
 
 
 
-.services{
+.services {
     font-style: normal;
     font-weight: 700;
-    font-size:45px;
+    font-size: 45px;
     line-height: 54px;
     top: 200px;
     display: flex;
@@ -103,7 +108,7 @@ justify-content: center;
     color: #FFFFFF;
 }
 
-.Fondo-agenda{
+.Fondo-agenda {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -117,13 +122,15 @@ justify-content: center;
     background: rgba(213, 73, 127, 0.5);
     border-radius: 50px;
 }
-.circulo{
-top: 700px;
-width: 450px;
-left: 600px;
-position: fixed;
+
+.circulo {
+    top: 700px;
+    width: 450px;
+    left: 600px;
+    position: fixed;
 }
-.qr{
+
+.qr {
     top: 780px;
     width: 200px;
     height: 200px;
@@ -131,7 +138,7 @@ position: fixed;
     position: absolute;
 }
 
-.Escanea{
+.Escanea {
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -144,7 +151,8 @@ position: fixed;
     color: #FFFFFF;
     position: absolute;
 }
-.Luego{
+
+.Luego {
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -159,11 +167,15 @@ position: fixed;
 
 }
 
-.servicio
-{
-position: absolute;
-color: #FFFFFF;
-right: 500px;
-line-height: 100px;
-top: 600px;
+.servicio {
+    position: absolute;
+    color: #FFFFFF;
+    right: 500px;
+    line-height: 100px;
+    top: 600px;
+}
+
+.list {
+    display: flex;
+    justify-content: start;
 }
