--- a/src/components/agendate/agenda.css
+++ b/src/components/agendate/agenda.css
@@ -174,6 +174,7 @@
 .list {
     display: flex;
     justify-content: start;
-    line-height: 90%;
-    text-transform: uppercase;
+    font-size: 27px;
+    line-height: 100%;
+    width: 100%;
 }
