--- a/src/components/opcion-preguntas/preguntas.css
+++ b/src/components/opcion-preguntas/preguntas.css
@@ -518,3 +518,25 @@ ul .lista-eva:hover .icon-2 {
   top: 650px;
   position: absolute;
 }
+.estre {
+  top: 750px;
+  position: absolute;
+  color: black;
+  left: 280px;
+  font-size: 30px;
+}
+
+.estre1 {
+  position: absolute;
+  top: 750px;
+  color: black;
+  font-size: 30px;
+}
+
+.estre2 {
+  position: absolute;
+  color: black;
+  top: 750px;
+  font-size: 30px;
+  left: 675px;
+}
