--- a/src/components/busca-tu-profe/findStyles.css
+++ b/src/components/busca-tu-profe/findStyles.css
@@ -164,8 +164,9 @@ p {
     position: fixed;
     top: 630px;
     height: 36%;
-    padding-top: 5rem;
+    padding-top: 12rem;
     overflow-y: scroll; 
+    left: 120px;
 }
 
 
